# cmake-xcode-multiplatform

./: .gitignore  CMakeLists.txt  README.md  library.cpp  main.cpp
